--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "mock": "npx tsx watch ./src/mocks/http.ts"
   },
   "dependencies": {
+    "@auth/core": "^0.39.0",
     "@faker-js/faker": "^9.7.0",
     "classnames": "^2.5.1",
     "dayjs": "^1.11.13",
     "next": "15.3.1",
+    "next-auth": "^5.0.0-beta.27",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
