--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@auth/core": "^0.39.0",
     "@faker-js/faker": "^9.7.0",
+    "@tanstack/react-query": "^5.75.7",
     "classnames": "^2.5.1",
     "dayjs": "^1.11.13",
     "next": "15.3.1",
@@ -21,6 +22,7 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@tanstack/react-query-devtools": "^5.75.7",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
