--- a/package.json
+++ b/package.json
@@ -11,24 +11,24 @@
   },
   "dependencies": {
     "@auth/core": "^0.39.0",
-    "@faker-js/faker": "^9.7.0",
-    "@tanstack/react-query": "^5.75.7",
+    "@faker-js/faker": "^9.2.0",
+    "@tanstack/react-query": "^5.62.3",
     "classnames": "^2.5.1",
     "dayjs": "^1.11.13",
-    "next": "15.3.1",
+    "next": "15.0.4",
     "next-auth": "^5.0.0-beta.27",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
-    "@tanstack/react-query-devtools": "^5.75.7",
+    "@tanstack/react-query-devtools": "^5.62.3",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "eslint": "^9",
-    "eslint-config-next": "15.3.1",
-    "msw": "^2.8.0",
+    "eslint": "^8",
+    "eslint-config-next": "^15.0.3",
+    "msw": "^2.6.6",
     "typescript": "^5"
   },
   "msw": {
