--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "next": "15.0.4",
     "next-auth": "^5.0.0-beta.27",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-intersection-observer": "^9.16.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
